# Microphysics

./: .clang-tidy  .codespell-ignore-words  .codespellrc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .travis.yml  .zenodo.json  AGENTS.md  CHANGES  CHANGES.md  CITATION.md  CMakeLists.txt  GMicrophysics.mak  GPackage.mak  Make.CVODE  Make.Microphysics  Make.Microphysics_extern  NETWORK_REQUIRES  README  README.md  _parameters  burner.f90  castro_burner.f90  deploy_docs_action.sh  f_rhs.f90  id_rsa_travis.enc  index.html  license.txt  network.f90  network_indices.f90  public_aprox13.f90  rates.f90  requirements.txt  rhs.f90  rpar_indices.f90  screen5.f90  sneut5.f90  (+1 more)
unit_test/: CMakeLists.txt  GPackage.mak  Make.package  Make.unit_test  _parameters  conductivity.F90  constants_cgs.f90  dummy.probin.template  eos.F90  eos.f90  eos_override.F90  microphysics.F90  microphysics.f90  network.F90  network.f90  react_util.H  unit_test.F90  unit_test.H  unit_test_F.H  write_job_info.cpp  write_job_info.f90
unit_test/burn_cell/: .main.f90.swp  GNUmakefile  Make.package  Mass_Fractions_C++.ipynb  README.md  README.txt  _inputs  _parameters  burn_cell.F90  burn_cell.H  burn_cell.py  burn_cell_F.H  burn_cell_compare_2tests.py  burn_cell_compare_abs.py  burn_cell_compare_ordinate.py  burn_cell_compare_rel.py  burn_cell_nl.py  burn_cell_testing.py  compare_networks.ipynb  ecsn_unit_test.out  init_aprox13  init_aprox19_bad  init_cburn  init_ctest  init_urca  inputs_ECSN_burn  inputs_ECSN_burn_Case-1  inputs_ECSN_test  inputs_aprox13  inputs_aprox13_mott  inputs_aprox19  inputs_aprox19.nse  inputs_aprox21  inputs_aprox21_rot1  inputs_aprox21_rot2  inputs_burn_aprox13  inputs_burn_aprox19_bad  inputs_burn_aprox21_bad  inputs_burn_subch.VODE  inputs_burn_urca  (+35 more)
unit_test/burn_cell_C/: GNUmakefile  Make.package  _parameters  burn_cell.F90  burn_cell.H  burn_cell_F.H  inputs_aprox13  main.cpp  probin_aprox13  probin_aprox21  probin_aprox21_rot1  probin_aprox21_rot2
unit_test/burn_cell_metal_chem/: CMakeLists.txt  GNUmakefile  README.md  _parameters  burn_cell.H  inputs_metal_chem  inputs_metal_chem_1  inputs_metal_chem_1_z10  inputs_metal_chem_1e-1  inputs_metal_chem_1e-2  inputs_metal_chem_1e-3  inputs_metal_chem_1e-4  inputs_metal_chem_1e-5  main.cpp  reference_solution_1.0.out  reference_solution_1.out  reference_solution_1_cr.out  reference_solution_1_z10.out  reference_solution_1_z_10.out  reference_solution_1e-1.out  reference_solution_1e-2.out  reference_solution_1e-3.out  reference_solution_1e-4.out  reference_solution_1e-4_cr.out  reference_solution_1e-5.out  reference_solution_1e-6.out  test.out
unit_test/burn_cell_primordial_chem/: CMakeLists.txt  GNUmakefile  README.md  _parameters  benchmark.sh  burn_cell.H  burn_cell_final_state.txt  dtai-1gpu.submit  dtai-cpu.submit  gpuvolta.pbs  hopper_compare.cpp  inputs_chem  inputs_primordial_chem  main.cpp  pareto_vode_ros2s.py  plot_pareto_vode_ros2s.py  plot_state_over_time.py  post_link_install_name.sh  reference_solution.out  run_perf_comparison.py  state_over_time.txt  subch2_unit_test.out
unit_test/burn_cell_python/: Burn-Subch.ipynb  Burn-Test-ECSN.ipynb  BurnUtils.py  README.md  probin_aprox13
unit_test/burn_cell_sdc/: GNUmakefile  _parameters  burn_cell.H  inputs_aprox19  inputs_aprox19.ci  inputs_aprox19.nse  inputs_aprox19.nse.ci  inputs_aprox19_failure  inputs_subch2_failure_stepreject  main.cpp  parse_integration_failure.py  state_over_time.txt
unit_test/eos_cell/: GNUmakefile  Make.package  _parameters  eos_cell.H  eos_cell_F.H  inputs_eos  main.cpp  probin
unit_test/eval_rhs_jac/: GNUmakefile  _parameters  burn_cell.H  inputs  main.cpp
unit_test/interp_cell/: GNUmakefile  Make.package  README.md  _parameters  interp_cell.H  main.cpp
unit_test/jac_cell/: Make.package  README.md  _parameters  inputs  inputs_aprox13  jac_cell.H  main.cpp
unit_test/nse_net_cell/: Make.package  README.md  _parameters  burn_cell.H  inputs_ase
unit_test/nse_table_cell/: GNUmakefile  Make.package  README.md  _parameters  inputs  main.cpp  nse_cell.H
unit_test/part_func_cell/: _parameters  main.cpp  pf_cell.H
unit_test/table_rate_cell/: GNUmakefile  README.md  _parameters  burn_cell.H
unit_test/test_aprox_rates/: GNUmakefile  Make.package  README.md  _parameters  aprox_rates_util.F90  aprox_rates_util.cpp  aprox_rates_util_F.F90  main.cpp  test_aprox_rates.H  test_aprox_rates_F.H  variables.F90  variables.H  variables.cpp  variables_F.F90
unit_test/test_aprox_rates_C/: GNUmakefile  main.cpp  variables.H
unit_test/test_ase/: GNUmakefile  Make.package  README.md  _parameters  ase_cell.H  burn_cell.H  inputs_ase  inputs_nse_test  main.cpp
unit_test/test_autodiff_arrays/: GNUmakefile  Make.package  README.md  _parameters  main.cpp  test_autodiff_arrays.H
unit_test/test_conductivity/: GNUmakefile  Make.package  README  _parameters  conductivity_util.F90  conductivity_util.cpp  conductivity_util_F.F90  input_conductivity  main.cpp  test_cond.H  test_cond_F.H  test_conductivity_F.H  variables.F90  variables.H  variables.cpp  variables_F.F90
unit_test/test_conductivity_C/: GNUmakefile  Make.package  main.cpp  probin  test_cond.H  variables.cpp
unit_test/test_cvode_react/: GNUmakefile  Make.package  README.md  _parameters  inputs_aprox13  inputs_aprox13_uniform  inputs_ignition  inputs_reaclib_urca  inputs_sn160  main.cpp  make_aprox13_cusolver.sh  probin.aprox13  probin.aprox13.uniform  probin.ignition  probin.reaclib_urca  probin.sn160  react_cuda.cpp  react_cuda_cusolver.cpp  react_serial.cpp  react_utils.F90  test_react.H  test_react_F.H  variables.F90  xin.aprox13.128  xin.aprox13.256  xin.aprox13.32
unit_test/test_eos/: GNUmakefile  GPackage.mak  Make.package  README.md  _parameters  eos_util.F90  eos_util.cpp  eos_util.f90  eos_util_F.F90  input_eos  input_eos.multigamma  input_eos.pc  input_eos.polytrope  input_eos.tillotson  input_eos_weaklib  inputs  main.cpp  main.f90  probin  probin.multigamma  probin.polytrope  probin.tillotson  probin.weaklib  test_eos.H  test_eos_F.H  unit_test.f90  (+5 more)
(+3206 files in other folders)
