#add primordial_chem test
add_subdirectory(burn_cell_primordial_chem)

#uncomment below if you want to see the values of all CMAKE variables
#get_cmake_property(_variableNames VARIABLES)
#list (SORT _variableNames)
#foreach (_variableName ${_variableNames})
#    message(STATUS "${_variableName}=${${_variableName}}")
#endforeach()
